--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
 
 /*---------------------------------------------------------------------------------------------------------------- */
 
-i, img {
+i, img, .notification-change {
     cursor: pointer;
 }
 
@@ -137,6 +137,10 @@ aside {
 
 .contact-row:hover{
     background-color: #ebe4e4;
+}
+
+.notification-change{
+    font-weight: 600;
 }
 
 /*----------------------------------------END ASIDE-------------------------------------------------------------- */
